--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-numpy==2.3.5
-pandas==2.3.3
-scikit-learn==1.8.0
-matplotlib==3.10.8
-seaborn==0.13.2
-scipy==1.16.3
-jupyter
+numpy
+pandas
+scikit-learn
+matplotlib
 joblib
-python-dotenv
